Tidy up the Nexus 10 build

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,7 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13}{15}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{12}{15}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{13}{16}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
@@ -65,8 +65,9 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 }
 
 \begin{center}
-\authorfont\fontsize{20}{24}\selectfont
+\authorfont\fontsize{20}{24}\selectfont\textcolor{ubdarkblue}{%
 Tigran Aivazian\\
 London, England\\
 13\ts{th} July 2011.\\
+}
 \end{center}
