--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,7 +19,7 @@
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{15}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{19}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
@@ -29,7 +29,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{10}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{16}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
 OF\\
@@ -41,7 +41,7 @@ OF\\
 \tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{18}{20}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{25}{30}\selectfont}
 \urantiapapers\\
 }%
 {%
@@ -51,7 +51,7 @@ OF\\
 \tunemarkup{pgcrownq}{\fontsize{19}{24}\selectfont}
 \tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{10}{12}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{15}{22}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
 \itshape
@@ -83,10 +83,11 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
+\tunemarkup{pgnexus10}{\fontsize{12}{16}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \tunemarkup{pgcrownq}{\Large\itshape}
 \tunemarkup{pgafour}{\Large\itshape}
