--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -97,7 +97,6 @@
 \def\urantiaauthorfont{PF DaVinci Script Pro}
 \def\urantiaheaderfont{Adobe Caslon Pro}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Adobe Caslon Pro}
 \def\urantiaexplfont{Adobe Caslon Pro}
 \def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -116,16 +115,7 @@
 \def\urantiatitlefont{Baskerville 10 Pro}
 \def\urantiaheaderfont{Helvetica Neue eText Pro}
 \def\urantiaheadingfont{Helvetica Neue eText Pro}
-\def\urantiaheaderackfont{Helvetica Neue eText Pro}
 \def\urantiaexplfont{Baskerville 10 Pro}
-\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
-\newcommand{\urantiamainfontsize}{15/19}
-\renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
-\renewcommand{\bibfnchapsize}{\large}
-\renewcommand{\bibfnvssize}{\normalsize}
-\newcommand{\authorfont}{\authorfontfamily\fontsize{21}{9}\bfseries\itshape}%
 }
 
 \tunemarkup{garamond}{%
@@ -134,7 +124,6 @@
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
 \def\urantiaheaderfont{Garamond Premier Pro Semibold Subhead}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Garamond Premier Pro Semibold Subhead}
 \def\urantiaexplfont{Garamond Premier Pro Medium Italic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -151,7 +140,6 @@
 \def\urantiatitlefont{GoudyOlSt BT}
 \def\urantiaheaderfont{GoudyOlSt BT}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{GoudyOlSt BT}
 \def\urantiaexplfont{GoudyOlSt BT}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -165,7 +153,6 @@
 \def\urantiatitlefont{Minion Pro}
 \def\urantiaheaderfont{Minion Pro}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Minion Pro}
 \def\urantiaexplfont{Minion Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -179,7 +166,6 @@
 \def\urantiatitlefont{Academy}
 \def\urantiaheaderfont{Academy Bold}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Academy}
 \def\urantiaexplfont{Academy}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -193,7 +179,6 @@
 \def\urantiatitlefont{Palatino Linotype}
 \def\urantiaheaderfont{Palatino Linotype}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Palatino Linotype}
 \def\urantiaexplfont{Palatino Linotype}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -207,7 +192,6 @@
 \def\urantiatitlefont{Old Standard}
 \def\urantiaheaderfont{Old Standard}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Old Standard}
 \def\urantiaexplfont{Old Standard}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -221,7 +205,6 @@
 \def\urantiatitlefont{Bookman Old Style}
 \def\urantiaheaderfont{Bookman Old Style}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Bookman Old Style}
 \def\urantiaexplfont{Bookman Old Style}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -235,7 +218,6 @@
 \def\urantiatitlefont{Arno Pro Semibold Display}
 \def\urantiaheaderfont{Arno Pro Semibold Subhead}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Arno Pro Semibold Subhead}
 \def\urantiaexplfont{Arno Pro}
 \def\pc{{\fontsize{8}{8}\selectfont\P}\kern1pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -249,7 +231,6 @@
 \def\urantiatitlefont{Century Schoolbook}
 \def\urantiaheaderfont{Century Schoolbook}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Century Schoolbook}
 \def\urantiaexplfont{Century Schoolbook}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -263,7 +244,6 @@
 \def\urantiatitlefont{Cambria}
 \def\urantiaheaderfont{Cambria}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Cambria}
 \def\urantiaexplfont{Cambria}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -277,7 +257,6 @@
 \def\urantiatitlefont{PF Agora Serif Pro}
 \def\urantiaheaderfont{PF Agora Serif Pro}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{PF Agora Serif Pro}
 \def\urantiaexplfont{PF Agora Serif Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -292,7 +271,6 @@
 \def\urantiatitlefont{Fedra Serif A Pro Book}
 \def\urantiaheaderfont{Fedra Serif A Pro Book}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Fedra Serif A Pro Book}
 \def\urantiaexplfont{Fedra Serif A Pro Book}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -306,7 +284,6 @@
 \def\urantiatitlefont{21 Cent}
 \def\urantiaheaderfont{21 Cent}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{21 Cent}
 \def\urantiaexplfont{21 Cent}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -320,7 +297,6 @@
 \def\urantiatitlefont{PF Adamant Pro}
 \def\urantiaheaderfont{PF Adamant Pro}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{PF Adamant Pro}
 \def\urantiaexplfont{PF Adamant Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -334,7 +310,6 @@
 \def\urantiatitlefont{Swift}
 \def\urantiaheaderfont{Swift}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Swift}
 \def\urantiaexplfont{Swift}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -348,7 +323,6 @@
 \def\urantiatitlefont{CharterITC}
 \def\urantiaheaderfont{CharterITC}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{CharterITC}
 \def\urantiaexplfont{CharterITC}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -362,7 +336,6 @@
 \def\urantiatitlefont{MaiolaPro}
 \def\urantiaheaderfont{MaiolaPro}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{MaiolaPro}
 \def\urantiaexplfont{MaiolaPro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -371,7 +344,7 @@
 }
 
 % Google Nexus 10 (or any Android 10" colour device)
-\tunemarkup{pgnexus10}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={100.0mm,160mm}]{geometry}}
+\tunemarkup{pgnexus10}{\RequirePackage[dvips,headheight=19pt,headsep=2pt,vmargin={0.2in,0.15in},hmargin={0.15in},twoside=true,papersize={135.0mm,216mm}]{geometry}}
 
 % Google Nexus 7 (or any Android 7" colour device)
 \tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,160mm}]{geometry}}
@@ -414,7 +387,6 @@
 \newfontfamily\sectiontitlefont[WordSpace=3.0,Letters=Uppercase,LetterSpace=1.5,Mapping=tex-text]{\urantiaheaderfont}
 %\newfontfamily\headingfont[Letters=Uppercase,LetterSpace=1.2,Numbers=Lining,Mapping=tex-text]{\urantiaheadingfont}
 \newfontfamily\headingfont[LetterSpace=1.2,WordSpace=1.2,Mapping=tex-text]{\urantiaheadingfont}
-\newfontfamily\headerackfont[Letters=Uppercase,LetterSpace=2.0,Mapping=tex-text]{\urantiaheaderackfont}
 \newfontfamily\authorfontfamily[Mapping=tex-text]{\urantiaauthorfont}
 \newfontfamily\explfont[Mapping=tex-text]{\urantiaexplfont}
 \newfontfamily\libertinefont[Mapping=tex-text]{Linux Libertine O}
@@ -437,12 +409,6 @@
 \tunemarkup{pgafour}{%
 \fancyhead[LE,RO]{\bibheadfont\vs@range}
 \fancyhead[RE,LO]{\bibheadfont\bibheadpagesize\thepage}
-}
-
-\tunemarkuptwo{pgkoboaurahd}{%
-  \providecommand{\authorfont}{\fontsize{13}{9}\bfseries\itshape}%
-}{%
-  \providecommand{\authorfont}{\fontsize{11}{9}\bfseries\itshape}%
 }
 
 \newcommand{\subtitlefont}{\Large}
@@ -512,11 +478,7 @@
 \def\secname{#1}
     \stepcounter{secnum}%
     \par\raggedbottom\addtolength{\topskip}{0pt plus 20pt}\vspace*{1ex}%
-    \ifx\secname\ackn
-       {\centering\headerackfont\parbox{\columnwidth}{\mdseries\itshape\centering\uppercase{#1}}\\*[3pt]}%
-    \else
-       {\centering\sectiontitlefont\parbox{\columnwidth}{\mdseries\centering\uppercase{#1}}\\*[3pt]}%
-    \fi
+    {\centering\sectiontitlefont\parbox{\columnwidth}{\mdseries\ifx\secname\ackn\itshape\fi\centering\uppercase{#1}}\\*[3pt]}%
 \def\bibnobreakspace{ }
     % XXX for section-level bookmarks uncomment the following line and comment the one after
     \bib@raise@anchor{\bibpdfbookmark[2]{#1}{\bkname_\thechnum_\curr@vs}\label{p\thepaper_\thesecnum}\hypertarget{p\thepaper_\thesecnum}{}}%
@@ -988,9 +950,10 @@
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
-\newcommand{\bibheadpapersize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
-\renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{6.9}{6.9}\selectfont}
+\newcommand{\bibheadpapersize}{\fontsize{6.5}{6.5}\selectfont}
+\renewcommand{\bibheadchapsize}{\fontsize{6.3}{6.3}\selectfont}
+\renewcommand{\bibheadversesize}{\fontsize{6}{6}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\bibpaperfont}{\large\bfseries}
 \newcommand{\bibpapertitlefont}{\Large\bfseries}
@@ -1000,16 +963,20 @@
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
-%\renewcommand{\bibfnchapsize}{\headerfont\Large}
-%\renewcommand{\bibfnvssize}{\headerfont\large}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{14}{19}\itshape}
 \newcommand{\parttitlefontsize}{\addfontfeature{LetterSpace=4.0}\huge}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{6}{14}\selectfont}
 \newcommand{\bibsectitlefont}{\fontsize{8.6}{8}\selectfont}
-%\renewcommand{\footnotesize}{\fontsize{13}{15}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
+\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
+\renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
+\renewcommand{\bibfnchapsize}{\large}
+\renewcommand{\bibfnvssize}{\normalsize}
+\newcommand{\authorfont}{\authorfontfamily\fontsize{21}{9}\bfseries\itshape}%
 }
 
 \tunemarkup{pgauraone}{%
@@ -1044,7 +1011,7 @@
 }
 
 \tunemarkup{pgnexus10}{%
-\protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{7}{7}\selectfont#1}}\kern0.2em\relax}
+\setcounter{DefaultLines}{4}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 %\pagecolor{ubpagebg}
@@ -1055,24 +1022,25 @@
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubgreen}{ahb}}}
 \newcommand{\bibpaperfont}{\fontsize{13}{15}\bfseries}
 \newcommand{\bibpapertitlefont}{\fontsize{15}{17}\bfseries}
-\renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
 \newcommand{\bibtocsuperheadfont}{\fontsize{18}{20}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{12}\bfseries}
-\renewcommand{\bibtocfont}{\fontsize{7.6}{15}\selectfont}
+\renewcommand{\bibtocfont}{\fontsize{7.6}{13}\selectfont}
 \newcommand{\bibheadpapersize}{\fontsize{8.0}{8.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{7.5}{7.5}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\subfont}{\fontsize{14}{17}\itshape}
-\newcommand{\parttitlefontsize}{\addfontfeature{LetterSpace=4.0}\LARGE}
-\newcommand{\bibsectitlefont}{\fontsize{9}{12}\selectfont}
-\renewcommand{\bibfnchapsize}{\large\bfseries}
-\renewcommand{\bibfnvssize}{\normalsize\bfseries}
-\renewcommand{\bibbookend}{\fontsize{13.5}{16}\selectfont}
-\renewcommand{\urantiamainfontsize}{13.5/16}
-\renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
+\newcommand{\subfont}{\fontsize{15}{20}\itshape}
+\newcommand{\parttitlefontsize}{\addfontfeature{LetterSpace=4.0}\huge}
+\newcommand{\bibsectitlefont}{\fontsize{10}{12}\selectfont}
 \setlength{\minitocafterskip}{-0.15ex}
-\renewcommand{\authorfont}{\fontsize{12}{12}\bfseries\itshape}%
+\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
+\renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
+\newcommand{\bibbookend}{\fontsize{15}{19}\selectfont}
+\newcommand{\urantiamainfontsize}{15/19}
+\renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
+\renewcommand{\bibfnchapsize}{\large}
+\renewcommand{\bibfnvssize}{\normalsize}
+\newcommand{\authorfont}{\authorfontfamily\fontsize{28}{8}\selectfont}%
 }
 
 \tunemarkup{pgnexus7}{%
