--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -54,9 +54,9 @@ and made it available on my website in both electronic and printed forms:
 \end{center}
 
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
-Many thanks to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
+Many thanks are due to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
-Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and friend.
+Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
 
 \tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
@@ -64,10 +64,9 @@ To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper 
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
 }
 
-\begin{center}
-\authorfont\fontsize{20}{24}\selectfont\textcolor{ubdarkblue}{%
+\textcolor{ubdarkblue}{%
+\authorfont\fontsize{20}{22}\selectfont\centering
 Tigran Aivazian\\
 London, England\\
 13\ts{th} July 2011.\\
 }
-\end{center}
