--- a/tex/p024.tex
+++ b/tex/p024.tex
@@ -68,7 +68,7 @@
 \vs p024 7:2 A servital will be long absent from Havona on superuniverse assignment, having been on many such missions previously, will return home, be granted the privilege of “personal contact” with the Paradise Central Shining, will be embraced by the Luminous Persons, and disappear from the recognition of his spirit fellows, never more to reappear among those of his kind.
 \vs p024 7:3 On returning from superuniverse service, a Havona Servital may enjoy numerous divine embraces and emerge therefrom merely an exalted servital. Experiencing the luminous embrace does not necessarily signify that the servital must translate into a Graduate Guide, but almost \bibfrac{1}{4}\ts{er} of those who achieve the divine embrace never return to the service of the realms.
 \vs p024 7:4 \pc There appears on the high records a succession of such entries as this:
-\vs p024 7:5 “And servital number 842,842,682,846,782 of Havona, named Sudna, came over from the superuniverse service, was received on Paradise, knew the Father, entered the divine embrace, and is not.”
+\vs p024 7:5 “And servital number\tunemarkup{pgkoboaurahd}{\linebreak} 842,842,682,846,782 of Havona, named Sudna, came over from the superuniverse service, was received on Paradise, knew the Father, entered the divine embrace, and is not.”
 \vs p024 7:6 When such an entry appears on the records, the career of such a servital is closed. But in just three moments (a little less than three days of your time) a newborn Graduate Guide “spontaneously” appears on the outer circuit of the Havona universe. And the number of Graduate Guides, allowing for a slight difference, due no doubt to those in transition, exactly equals the number of vanished servitals.
 \vs p024 7:7 \pc There is an additional reason for supposing the Graduate Guides to be evolved Havona Servitals, and that is the unfailing tendency of these guides and their associated servitals to form such extraordinary attachments. The manner in which these supposedly separate orders of beings understand and sympathize with one another is wholly inexplicable. It is refreshing and inspiring to witness their mutual devotion.
 \vs p024 7:8 \pc The Seven Master Spirits and the associated Seven Supreme Power Directors, respectively, are the personal repositories of the mind potential and of the power potential of the Supreme Being which he does not, as yet, operate personally. And when these Paradise associates collaborate to create the Havona Servitals, the latter are inherently involved in certain phases of Supremacy. Havona Servitals are thus, in actuality, a reflection in the perfect central universe of certain evolutionary potentialities of the time\hyp{}space domains, all of which is disclosed when a servital undergoes transformation and re\hyp{}creation. We believe that this transformation takes place in response to the will of the Infinite Spirit, undoubtedly acting in behalf of the Supreme. Graduate Guides are not created by the Supreme Being, but we all conjecture that experiential Deity is in some way concerned in those transactions which bring these beings into existence.
