--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -17,6 +17,7 @@
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\include{tex/paper-titles}}
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
+\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}
 \tunemarkup{introinclude}{\include{tex/intro}}
 \ifvoli
 \include{tex/p000}
