Revert 118:6.8 to 1955 form and remove the variant

--- a/tex/p118.tex
+++ b/tex/p118.tex
@@ -58,7 +58,7 @@
 \vs p118 6:5 Volition on any level short of the absolute encounters limitations which are constitutive in the very personality exercising the power of choice. Man cannot choose beyond the range of that which is choosable. He cannot, for instance, choose to be other than a human being except that he can elect to become more than a man; he can choose to embark upon the voyage of universe ascension, but this is because the human choice and the divine will happen to be coincident upon this point. And what a son desires and the Father wills will certainly come to pass.
 \vs p118 6:6 In the mortal life, paths of differential conduct are continually opening and closing, and during the times when choice is possible the human personality is constantly deciding between these many courses of action. Temporal volition is linked to time, and it must await the passing of time to find opportunity for expression. Spiritual volition has begun to taste liberation from the fetters of time, having achieved partial escape from time sequence, and that is because spiritual volition is self\hyp{}identifying with the will of God.
 \vs p118 6:7 Volition, the act of choosing, must function within the universe frame which has actualized in response to higher and prior choosing. The entire range of human will is strictly finite\hyp{}limited except in one particular: When man chooses to find God and to be like him, such a choice is superfinite; only eternity can disclose whether this choice is also superabsonite.
-\vs p118 6:8 \pc To recognize Deity omnipotence is to enjoy security in your experience of cosmic citizenship, to possess assurance of safety in the long journey to Paradise. But to accept the fallacy of omnificence is to embrace the colossal error of pantheism.\fnc{But to accept the fallacy of omnificence is to embrace the colossal error of \bibtextul{Pantheism.} \bibexpl{Though religions and even philosophical schools are normally capitalized, e.g. “Platonism,” “Stoicism,” “Deism,” “pantheism” is more of a philosophical concept than an organized system of ideas and so is normally not capitalized --- either currently or in writings contemporaneous with The Urantia Book.}}
+\vs p118 6:8 \pc To recognize Deity omnipotence is to enjoy security in your experience of cosmic citizenship, to possess assurance of safety in the long journey to Paradise. But to accept the fallacy of omnificence is to embrace the colossal error of Pantheism.
 \usection{7.\bibnobreakspace Omniscience and Predestination}
 \vs p118 7:1 The function of Creator will and creature will, in the grand universe, operates within the limits, and in accordance with the possibilities, established by the Master Architects. This foreordination of these maximum limits does not, however, in the least abridge the sovereignty of creature will within these boundaries. Neither does ultimate foreknowledge --- full allowance for all finite choice --- constitute an abrogation of finite volition. A mature and farseeing human being might be able to forecast the decision of some younger associate most accurately, but this foreknowledge takes nothing away from the freedom and genuineness of the decision itself. The Gods have wisely limited the range of the action of immature will, but it is true will, nonetheless, within these defined limits.
 \vs p118 7:2 Even the supreme correlation of all past, present, and future choice does not invalidate the authenticity of such choosings. It rather indicates the foreordained trend of the cosmos and suggests foreknowledge of those volitional beings who may, or may not, elect to become contributory parts of the experiential actualization of all reality.
