Adjust the author name and use digits

--- a/tex/p119.tex
+++ b/tex/p119.tex
@@ -1,12 +1,12 @@
 \upaper{119}{The Bestowals of Christ Michael}
-\author{Chief of Evening Stars}
+\author{Gavalia, Chief of Evening Stars}
 \vs p119 0:1 Chief of the Evening Stars of Nebadon, I am assigned to Urantia by Gabriel on the mission of revealing the story of the seven bestowals of the Universe Sovereign, Michael of Nebadon, and my name is Gavalia. In making this presentation, I will adhere strictly to the limitations imposed by my commission.
 \vs p119 0:2 \pc The attribute of bestowal is inherent in the Paradise Sons of the Universal Father. In their desire to come close to the life experiences of their subordinate living creatures, the various orders of the Paradise Sons are reflecting the divine nature of their Paradise parents. The Eternal Son of the Paradise Trinity led the way in this practice, having seven times bestowed himself upon the seven circuits of Havona during the times of the ascension of Grandfanda and the first of the pilgrims from time and space. And the Eternal Son continues to bestow himself upon the local universes of space in the persons of his representatives, the Michael and Avonal Sons.
 \vs p119 0:3 When the Eternal Son bestows a Creator Son upon a projected local universe, that Creator Son assumes full responsibility for the completion, control, and composure of that new universe, including the solemn oath to the eternal Trinity not to assume full sovereignty of the new creation until his seven creature bestowals shall have been successfully completed and certified by the Ancients of Days of the superuniverse of jurisdiction. This obligation is assumed by every Michael Son who volunteers to go out from Paradise to engage in universe organization and creation.
 \vs p119 0:4 The purpose of these creature incarnations is to enable such Creators to become wise, sympathetic, just, and understanding sovereigns. These divine Sons are innately just, but they become understandingly merciful as a result of these successive bestowal experiences; they are naturally merciful, but these experiences make them merciful in new and additional ways. These bestowals are the last steps in their education and training for the sublime tasks of ruling the local universes in divine righteousness and by just judgment.
 \vs p119 0:5 Though numerous incidental benefits accrue to the various worlds, systems, and constellations, as well as to the different orders of universe intelligences affected and benefited by these bestowals, still they are primarily designed to complete the personal training and universe education of a Creator Son himself. These bestowals are not essential to the wise, just, and efficient management of a local universe, but they are absolutely necessary to a fair, merciful, and understanding administration of such a creation, teeming with its varied forms of life and its myriads of intelligent but imperfect creatures.
 \vs p119 0:6 The Michael Sons begin their work of universe organization with a full and just sympathy for the various orders of beings whom they have created. They have vast stores of mercy for all these differing creatures, even pity for those who err and flounder in the selfish mire of their own production. But such endowments of justice and righteousness will not suffice in the estimate of the Ancients of Days. These triune rulers of the superuniverses will never certify a Creator Son as Universe Sovereign until he has really acquired the viewpoint of his own creatures by actual experience in the environment of their existence and as these very creatures themselves. In this way such Sons become intelligent and understanding rulers; they come to \bibemph{know} the various groups over which they rule and exercise universe authority. By living experience they possess themselves of practical mercy, fair judgment, and the patience born of experiential creature existence.
-\vs p119 0:7 \pc The local universe of Nebadon is now ruled by a Creator Son who has completed his service of bestowal; he reigns in just and merciful supremacy over all the vast realms of his evolving and perfecting universe. Michael of Nebadon is the 611,121\ts{st} bestowal of the Eternal Son upon the universes of time and space, and he began the organization of your local universe about 400,000,000,000 years ago. Michael made ready for his first bestowal adventure about the time Urantia was taking on its present form, one billion years ago. His bestowals have occurred about 150,000,000 years apart, the last taking place on Urantia 1900 years ago. I will now proceed to unfold the nature and character of these bestowals as fully as my commission permits.
+\vs p119 0:7 \pc The local universe of Nebadon is now ruled by a Creator Son who has completed his service of bestowal; he reigns in just and merciful supremacy over all the vast realms of his evolving and perfecting universe. Michael of Nebadon is the 611,121\ts{st} bestowal of the Eternal Son upon the universes of time and space, and he began the organization of your local universe about $4\times 10^{11}$ years ago. Michael made ready for his first bestowal adventure about the time Urantia was taking on its present form, $10^9$ years ago. His bestowals have occurred about $1.5\times 10^8$ years apart, the last taking place on Urantia 1900 years ago. I will now proceed to unfold the nature and character of these bestowals as fully as my commission permits.
 \usection{1.\bibnobreakspace The First Bestowal}
 \vs p119 1:1 It was a solemn occasion on Salvington almost one billion years ago when the assembled directors and chiefs of the universe of Nebadon heard Michael announce that his elder brother, Immanuel, would presently assume authority in Nebadon while he (Michael) would be absent on an unexplained mission. No other announcement was made about this transaction except that the farewell broadcast to the Constellation Fathers, among other instructions, said: “And for this period I place you under the care and keeping of Immanuel while I go to do the bidding of my Paradise Father.”
 \vs p119 1:2 After sending this farewell broadcast, Michael appeared on the dispatching field of Salvington, just as on many previous occasions when preparing for departure to Uversa or Paradise except that he came alone. He concluded his statement of departure with these words: “I leave you but for a short season. Many of you, I know, would go with me, but whither I go you cannot come. That which I am about to do, you cannot do. I go to do the will of the Paradise Deities, and when I have finished my mission and have acquired this experience, I will return to my place among you.” And having thus spoken, Michael of Nebadon vanished from the sight of all those assembled and did not reappear for 20 years of standard time. In all Salvington, only the Divine Minister and Immanuel knew what was taking place, and the Union of Days shared his secret only with the chief executive of the universe, Gabriel, the Bright and Morning Star.
